--- a/CoinApp-APIGateway/src/main/resources/application.yml
+++ b/CoinApp-APIGateway/src/main/resources/application.yml
@@ -1,8 +1,14 @@
 server:
   port: 8765
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 spring:
   application:
     name: coinapp-apigateway
+  main:
+    web-application-type: reactive
   cloud:
     gateway:
       discovery:
@@ -13,3 +19,9 @@ spring:
         uri: lb://coin-app
         predicates: 
         - Path=/coin-app/**
+      - id: openapi
+        uri: lb://coinapp-apigateway
+        predicates: 
+        - Path=/v3/api-docs/**
+        filters:
+        - RewritePath=/v3/api-docs/(?<path>.*), /$\{path}/v3/api-docs
