--- a/CoinApp-EurekaServer/pom.xml
+++ b/CoinApp-EurekaServer/pom.xml
@@ -9,18 +9,22 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.capp</groupId>
-	<artifactId>CoinApp-APIGateway</artifactId>
+	<artifactId>CoinApp-EurekaServer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>CoinApp-APIGateway</name>
+	<name>CoinApp-EurekaServer</name>
 	<description>CoinApp-APIGateway</description>
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2021.0.2</spring-cloud.version>
+		<spring-cloud.version>2021.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-gateway</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 
 		<dependency>
@@ -28,15 +32,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-		    <groupId>org.springdoc</groupId>
-		    <artifactId>springdoc-openapi-webflux-ui</artifactId>
-		    <version>1.5.7</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.springframework.cloud</groupId>
-		    <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
- 		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
