--- a/CoinApp/src/main/resources/application.yml
+++ b/CoinApp/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: 8100
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka  
 spring:
   application:
     name: coin-app
+springdoc:
+  show-actuator: true
